<resources>
    <string name="app_name">TSM</string>
    <string name="action_settings">Settings</string>
    <string name="action_info">Info</string>
    <string name="action_delete_account">Delete own account permanently</string>
    <string name="lbl_internal_memory">Internal memory</string>
    <string name="lbl_new_contact">New Contact</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_progress_wait">Please wait</string>
    <string name="btn_register">Register</string>
    <string name="btn_add_to_contacts">Add to contacts</string>
    <string name="lbl_unread_messages">new messages</string>
    <string name="lbl_version">Version</string>
    <string name="hint_enter_login">Login</string>
    <string name="hint_enter_password">Personal password</string>
    <string name="hint_contact_name">Contact Name</string>
    <string name="hint_contact_login">Contact login*</string>
    <string name="hint_write_message">Write a message here</string>
    <string name="lbl_new_msgs_in_chat">New messages in this chat</string>
    <string name="lbl_accept_term_of_use">Accept </string>
    <string name="lbl_term_of_use">You must accept the<u><font color='blue'> Terms of Use </font></u>  for further using of TSM </string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_category_all">All</string>
    <string name="btn_category_confirm">Confirm</string>
    <string name="btn_category_confirm_in">Invitations from Members</string>
    <string name="btn_category_confirm_out">Invitations to Members</string>
    <string name="btn_category_confirm_wait">Waiting requests</string>
    <string name="btn_category_invitation_ready">Sent invitations</string>
    <string name="btn_category_invitation_todo">Can be invited</string>
    <string name="btn_category_messenger">Messenger</string>
    <string name="btn_chats">Chats</string>
    <string name="btn_contacts">Contacts</string>
    <string name="title_remove_from_contacts">Remove from contacts</string>
    <string name="btn_leave_chat">Leave chat</string>
    <string name="btn_not_to_share">Do not share</string>
    <string name="btn_ok">OK</string>
    <string name="btn_request_contact">Request contact</string>
    <string name="btn_share">Share</string>
    <string name="btn_login">Login</string>
    <string name="btn_close_tsm">Close TSM</string>
    <string name="btn_import_now">Import </string>
    <string name="btn_not_import">Do not import</string>
    <string name="title_error">ERROR</string>
    <string name="title_invalid_password">Invalid password</string>
    <string name="title_rename">Rename</string>
    <string name="title_scan_error">Scan Error!</string>
    <string name="title_app_locked">TSM is locked</string>
    <string name="title_export">Private key is exported</string>
    <string name="title_import">Import private key</string>
    <string name="title_success">Success</string>
    <string name="info_asks_share_contacts">asks you to share contacts</string>
    <string name="info_user_capital">User</string>
    <string name="info_export">Private key is used to log in with your account at other devices, or to restore it after uninstalling the App.\n You can export it later via application menu.</string>
    <string name="info_operation_done_success">Operation was done successfully!</string>
    <string name="info_delete_account">Do you really want to delete your account permanently?</string>
    <string name="error_access_denied">Access denied</string>
    <string name="error_empty_name_field">Login field should be filled.</string>
    <string name="error_group_chat_member_count">You need select more then one user.</string>
    <string name="error_login_owner">You can not enter your own login</string>
    <string name="error_request_member_count">You need to select contact for request.</string>
    <string name="error_group_member_limit">Group-Chat is limited to max. %d Members</string>
    <string name="error_invalid_login">The provided login should have only latin letters and numbers, symbols "-", "_" and spaces. It should have length from 3 to 30 symbols.</string>
    <string name="error_login_already_exists">This login already exists.</string>
    <string name="error_password_properties">Your password should contain:\n
        - from 8 to 20 symbols;\n
        - at least one lowercase letter, one uppercase letter and one digit;\n
        - no space characters.</string>
    <string name="error_password_problems">Correct your password:</string>
    <string name="error_password_invalid_length">– make it from 8 to 20 symbols length</string>
    <string name="error_password_no_lowercase_found">– insert at least one lowercase letter</string>
    <string name="error_password_no_uppercase_found">– insert at least one uppercase letter</string>
    <string name="error_password_no_digit_found">– insert at least one digit</string>
    <string name="error_password_space_symbol_found">– remove all space symbols</string>
    <string name="error_password_validate">Password validation failed!\nApplication will be locked for some period if wrong password is provided 10 times in a row.\nYou have %s to enter correct password.</string>
    <string name="error_qr_scan">QR code scan failed!\nApplication will be locked for some period if wrong QR code is provided 3 times in a row.\nYou have %d attempts to scan a valid QR code.</string>
    <string name="error_app_becomes_locked">Application is locked!\n\nYou will not have access to your TSM for a minute. Please wait.</string>
    <string name="error_smth_wrong">Sorry, but something was wrong. Please try again.</string>
    <string name="error_user_not_registered_notary">Sorry, but such user cannot be added to your address book. User may be not registered on Notary Server or may have no TSM apps registered.</string>
    <string name="error_app_locked">Sorry, app cannot be launched now. It will be unlocked in a minute. Please wait.</string>
    <string name="error_import_file_read">There was an error while reading key from file. Retry?</string>
    <string name="error_user_private_key_invalid">Sorry, your private user key was already created. Please import it.</string>
    <string name="error_notary_unavailable">Sorry, but Notary Server is temporary unavailable. Please try again later.</string>
    <string name="error_transact_processing">Sorry, but something went wrong when processing your request. Please try again later.</string>
    <string name="error_login_outdated">Sorry, but there are no active users with such credentials. Please check login you entered.</string>
    <string name="error_low_version">You have an old version of TSM. Please update it and try again.</string>
    <string name="error_too_many_participants">The number of participants exceeds the limit.</string>
    <string name="error_chat_has_not_have_history">This chat doesn\'t have history.</string>
    <string name="error_file_transfer_offline_session_not_init">Sorry, session is not initiated. Please connect the server to receive session key.</string>
    <string name="error_file_transfer_empty_file">Sorry, You can not send empty file  </string>
    <string name="error_user_unreachable">User has no free keys to encrypt messages.</string>
    <string name="error_chat_unreachable">No participants have free keys to encrypt messages.</string>
    <string name="alarm_title">Security alarm</string>
    <string name="alarm_owner_key">Owner\'s  key validation failed </string>
    <string name="alarm_participant_key">Participant\'s  key validation failed </string>
    <string name="notification_new_messages"> You have new messages </string>
    <string name="notification_messages_sent"> Offline messages </string>
    <string name="notification_new_messages_in_chat"> You have %d messages in  </string>
    <string name="notification_new_messages_has_been_sent"> Your message has been sent in  </string>
    <string name="notification_new_contact_request"> You have new contactRequest </string>
    <string name="notification_new_answer_title">You received answer for a request</string>
    <string name="notification_new_answer_accept"> %s accepted your request </string>
    <string name="notification_new_answer_decline"> %s declined your request </string>
    <string name="notification_new_inform">Contact has  installed TSM</string>
    <string name="notification_connection_lost"> Server connection lost </string>
    <string name="notification_message_queue">Waiting for response from server.</string>
    <string name="notification_file">File saved.</string>
    <string name="notification_deleterelation_title">You were deleted from a contact list</string>
    <string name="notification_deleterelation_detail">User %s removed you from his contacts list.</string>
    <string name="notification_title_new_messages">message</string>
    <string name="notification_title_inform">information</string>
    <string name="notification_title_connection">connection</string>
    <string name="notification_title_queue">message queue</string>
    <string name="notification_title_request">contact request</string>
    <string name="notification_title_file">File transfer</string>
    <string name="title_choose_export_mode">Select export mode</string>
    <string name="lbl_text_file">Text file</string>
    <string name="lbl_qr_code">QR-code</string>
    <string name="title_choose_import_mode">Select import mode</string>
    <string name="info_import_canceled">Import operation was canceled. Retry?</string>
    <string name="error_import_scan">There was an error while reading key from QR-code. Retry?</string>
    <string name="title_keystore_locked">Keystore is locked</string>
    <string name="error_keystore_locked">Sorry, your keystore is locked or not activated. TSM needs unlocked keystore to save data securely.\nTo activate your keystore please set \"Lock screen\" parameter in your phone settings to \"Pattern\", \"Pin\" or \"Password\".\nAfter you unlock your keystore, TSM can be launched normally.</string>
    <string name="btn_unlock_keystore">Unlock keystore</string>
    <string name="btn_reset_keystore">Reset keystore</string>
    <string name="btn_add_participants">Add participants</string>
    <string name="pref_title_vibrate_silent">Minimal period between vibration signals (sec)</string>
    <string name="title_add_contact">Add contact</string>
    <string name="config_download_folder" translatable="false">/storage/emulated/0/Download/TSM_downloads</string>
    <string name="pref_title_download_folder">Download file folder</string>
    <string name="action_export_user_key_condensed">Key export</string>
    <string name="pref_title_privatekey_show_time">Private key show time (sec)</string>
    <string name="title_find">Find</string>
    <string name="title_create_group_chat">Create chat</string>
    <string name="sequre_live_time">Max expectation time for delivery (minutes)</string>
    <string name="btn_decline">Decline request</string>
    <string name="btn_accept_request">Accept request</string>
    <string name="action_delete_account_condensed">Delete account</string>
    <string name="action_delete_chat">Delete chat</string>
    <string name="btn_new_user">New user</string>
    <string name="btn_existing_user">Existing user</string>
    <string name="lbl_check_password">Show password</string>
    <string name="lbl_chat_setting">Chat settings</string>
    <string name="lbl_downloads">Downloads</string>
    <string name="export_private_key">export private user key</string>
    <string name="btn_change_folder">Change folder</string>
    <string name="hint_login">Only latin letters and numbers, symbols \"-\", \"_\" and spaces. Length from 3 to 30 symbols.</string>
    <string name="hint_password_properties">
        - At least one lowercase letter, one uppercase letter and one digit;\n
        - no space characters;\n
        - from 8 to 20 symbols. </string>
</resources>