<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_rename"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        android:title="@string/title_rename"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_add_participants"
        android:icon="@drawable/ic_group_add_white_24dp"
        android:title="@string/btn_add_participants"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_add_to_contacts"
        android:icon="@drawable/ic_add_to_contacts_white"
        android:title="@string/btn_add_to_contacts"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/remove_from_contacts"
        android:icon="@drawable/ic_remove_from_contacts_white"
        android:title="@string/title_remove_from_contacts"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_leave_chat"
        android:icon="@drawable/ic_exit_to_app_white_24dp"
        android:title="@string/btn_leave_chat"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_delete_chat"
        android:title="@string/action_delete_chat"
        app:showAsAction="never" />

</menu>