<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_request_contact"
        android:icon="@drawable/ic_request"
        android:title="@string/btn_request_contact"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_rename"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        android:title="@string/title_rename"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_remove"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/title_remove_from_contacts"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_decline"
        android:icon="@drawable/ic_remove_circle_outline_white_24dp"
        android:title="@string/btn_decline"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_accept"
        android:icon="@drawable/ic_add_circle_outline_white_24dp"
        android:title="@string/btn_accept_request"
        app:showAsAction="always"/>

</menu>