<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context="com.tsm_messenger.activities.registration.TsmSignInActivity"
    android:id="@+id/layour_entry">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lbl_term_of_use"
            android:id="@+id/tvLicinse_url"
            style="@style/label"
            android:layout_margin="10dp"
            android:layout_gravity="center" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_accept_term_of_use"
            android:id="@+id/cb_termofuse"
            android:checked="false"
            style="@style/label"
            android:layout_margin="10dp"
            android:layout_gravity="center" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/layoutRegButton"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:minHeight="@dimen/btn_std_height"
            android:onClick="startNewUserLayout"
            android:text="@string/btn_new_user"
            android:id="@+id/btNewUser" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:minHeight="@dimen/btn_std_height"
            android:onClick="startExistingUserLayout"
            android:text="@string/btn_existing_user"
            android:id="@+id/btExistUser" />

    </LinearLayout>


</LinearLayout>