<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lblTitle_dialog"
        style="@style/h1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/h1_height"
        android:text="@string/lbl_chat_setting" />

    <TextView
        android:id="@+id/sequreLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_chat_setting"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/sequreType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <TextView
        android:id="@+id/lbl_delivery_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_min_margin"
        android:text="@string/sequre_live_time"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/timeLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible">

        <EditText
            android:id="@+id/tbLiveTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:maxLength="7"
            android:visibility="visible" />

        <Spinner
            android:id="@+id/timeType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/timetype_array"
            android:visibility="visible"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </LinearLayout>

    <TextView
        android:id="@+id/horisontalSeparator_dialog"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@color/grey" />

    <LinearLayout
        android:id="@+id/llButtonContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDialog_cancel"
            style="@style/btn_dialog"
            android:layout_weight="1"
            android:text="@string/btn_cancel" />

        <Button
            android:id="@+id/btnDialog_ok"
            style="@style/btn_dialog"
            android:layout_weight="1"
            android:text="@string/btn_ok" />

    </LinearLayout>

</LinearLayout>